Update 1.0: fixed the animation bug in mobile menu links, smaller screen size layout bug fixed

--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
-/* * {
-    outline: 1px solid red;
-} */
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    /* outline: 1px solid red; */
+}
+
+html {
+    scroll-behavior: smooth;
+}
 
 :root {
     --primary-color: #6610f2;
@@ -126,16 +133,16 @@
 @keyframes entry-view {
     from {
         opacity: 0;
-        transform: scale(1.1);
+        transform: translateX(-40px);
     }
 
     to {
         opacity: 1;
-        transform: scale(1);
+        transform: translateX(0px);
     }
 }
 
-.show {
+.show-animation {
     animation: entry-view 0.5s linear forwards;
 }
 
@@ -148,6 +155,12 @@
 /* -------- responsive codes ---------- */
 
 @media screen and (max-width: 430px) {
+
+    html,
+    body {
+        overflow-x: hidden;
+    }
+
     .feature-info {
         margin-top: 50px;
     }
